--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -28,7 +28,11 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-primary submit-btn btn-block" type="submit" [disabled]="loginForm.invalid">Login</button>
+                            <button class="btn btn-primary submit-btn btn-block" type="submit" [disabled]="loginForm.invalid" *ngIf="!loading">Login</button>
+
+                            <button class="btn btn-primary submit-btn btn-block" type="button" [disabled]="true" *ngIf="loading">
+                                <i class="fa fa-spin fa-sync"></i>
+                                Espere...</button>
                         </div>
 
 
